/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)
===============================================================================

2008-01-02  Gilles Dumortier <dgil at ieee dot org>
	* Indicator : display the indice market and clock (previous was the
	  portfolio default market and the connector latest clock)
	* Convert from connector timezone (for example, finance.yahoo.com is
	  EST) to quote place timezone (for example, GTO is CET)

2008-01-01  Gilles Dumortier <dgil at ieee dot org>
	* filter the proxy server and auth (SF bug 1861624)
	* connection Timeout is configurable (SF bug 1861328)

2007-12-31  Gilles Dumortier <dgil at ieee dot org>
	* New tarball (r825) (0.4.6 Release Candidat)
	* List of quotes view : display the number of quotes filtered in list

2007-12-30  Gilles Dumortier <dgil at ieee dot org>
	* closed.txt updated for main markets (euronext, nyse, ...)

2007-12-30  Michel Legrand <m_leg at users dot sourceforge dot net>
	* Patch and new module (itrade_quotes_xetra.py) for FRANKFURT EXCHANGE
	* Fix PT / ES in symbols files (like indices.txt)

2007-12-29  Gilles Dumortier <dgil at ieee dot org>
	* update ./INSTALL file with some forum feedbacks on Linux & OSX
	* wrong selection after choosing a new sorting column (SF bug 1827058)

2007-12-28  Gilles Dumortier <dgil at ieee dot org>
	* Less digit for PRU except in the indicators pane
	* Operation Editor : display portfolio currency symbol (SF bug 1651954)
	* Crash clicking an indice (SF bug 1859459)
	* do not convert money from N/A ! (SF bug 1859824)
	* Irish stock exchange - list of quotes (SF bug 1859781)
	* Euronext Plugins : do not use idInstrument anymore (SF bug 1859791)
	* Massive update the copyright date
	* r783 new problems with indices (%, hour) (SF bug 1778487)
	* merge Patch from Michel for IRISH et MADRID EXCHANGE

2007-12-27  Gilles Dumortier <dgil at ieee dot org>