@@ -199,7 +199,7 @@ class iTradeQuotePropertiesPanel(wx.Panel):
 
         thebox.AddSizer(box, 0, wx.GROW|wx.ALIGN_CENTER_VERTICAL|wx.ALL, 5)
 
-        self.fillConnectors(bInit=True)
+        self.fillConnectors()
 
         # ---[ Restore/Set Market / Connectors Properties ]---
 
@@ -316,16 +316,17 @@ class iTradeQuotePropertiesPanel(wx.Panel):
         # then refresh the display
         self.saveThenDisplayReference()
 
-    def fillConnectors(self,bInit=False):
+    def fillConnectors(self):
+
         # --- live
+        self.editLiveConnector.Clear()
         count = 0
         idx = 0
         lst = []
         for aname,amarket,aplace,adefaut,aconnector,aqlist,aqtag in listLiveConnector(self.m_quote.market(),self.m_quote.list(),self.m_quote.place()):
             if not aname in lst: # be sure its unique in the list
-                if bInit:
-                    self.editLiveConnector.Append(aname,aname)
-                    lst.append(aname)
+                self.editLiveConnector.Append(aname,aname)
+                lst.append(aname)
                 if aname==self.m_quote.liveconnector().name():
                     # found the "to be selected"
                     idx = count
@@ -334,14 +335,14 @@ class iTradeQuotePropertiesPanel(wx.Panel):
         self.editLiveConnector.SetSelection(idx)
 
         # --- import
+        self.editImportConnector.Clear()
         count = 0
         idx = 0
         lst = []
         for aname,aplace,amarket,adefaut,aconnector,aqlist,aqtag in listImportConnector(self.m_quote.market(),self.m_quote.list(),self.m_quote.place()):
             if not aname in lst: # be sure its unique in the list
-                if bInit:
-                    self.editImportConnector.Append(aname,aname)
-                    lst.append(aname)
+                self.editImportConnector.Append(aname,aname)
+                lst.append(aname)
                 if aname==self.m_quote.importconnector().name():
                     # found the "to be selected"
                     idx = count
